--- a/hack/manifests/sysbench/galera/sysbench-galera_cronjob.yaml
+++ b/hack/manifests/sysbench/galera/sysbench-galera_cronjob.yaml
@@ -18,10 +18,10 @@ spec:
               - oltp_read_write 
               - --tables=10 
               - --table_size=1000000
-              - --mysql-host=maxscale-galera.default.svc.cluster.local
+              - --mysql-host=mariadb-galera-maxscale.default.svc.cluster.local
               - --mysql-port=3306
-              - --mysql-user=maxscale-client
-              - --mysql-password=MaxScale11!
+              - --mysql-user=mariadb-galera-maxscale-client
+              - --mysql-password=[9O%h0zyMXqW47kU
               - --mysql-db=sbtest
               - --time=300 
               - --threads=16 
