--- a/examples/manifests/mariadb_v1alpha1_mariadb_galera_full.yaml
+++ b/examples/manifests/mariadb_v1alpha1_mariadb_galera_full.yaml
@@ -38,7 +38,7 @@ spec:
       podRecoveryTimeout: 5m
       podSyncTimeout: 5m
     initContainer:
-      image: ghcr.io/mariadb-operator/init:v0.0.13
+      image: ghcr.io/mariadb-operator/init:v0.0.16
     volumeClaimTemplate:
       resources:
         requests:
@@ -97,7 +97,7 @@ spec:
 
   resources:
     requests:
-      cpu: 1
+      cpu: 100m
       memory: 512Mi
     limits:
       memory: 1Gi
